# Travel-ai-platform

./: .env  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py  exception_handlers.py  health.py  rag.py  router.py  test.py
app/core/: config.py  exceptions.py  logging.py  middleware.py
app/features/ai/: service.py
app/features/indexing/: schemas.py  service.py
app/features/itinerary/: schemas.py
app/features/rag/: schemas.py  service.py
app/infrastructure/chunking/: base.py  recursive.py
app/infrastructure/embedding/: base.py  gemini.py  utils.py
app/infrastructure/llm/: base.py  client.py  gemini.py  models.py
app/infrastructure/vectordb/: base.py  qdrant.py
app/shared/: config.py  logging.py
